initial changes for risk management

--- a/backend/KAITerminal/KAITerminal.RiskEngine/appsettings.Development.json
+++ b/backend/KAITerminal/KAITerminal.RiskEngine/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Zerodha": {
+    "apiKey": "your_api_key",
+    "apiSecret": "your_api_secret",
+    "accessToken": "your_access_token",
+    "baseUrl": "https://api.kite.trade",
+    "webSocketUrl": "wss://ws.kite.trade"
   }
 }
