--- a/backend/KAITerminal/KAITerminal.RiskEngine/appsettings.json
+++ b/backend/KAITerminal/KAITerminal.RiskEngine/appsettings.json
@@ -21,5 +21,12 @@
       "maxReEntry": 2,
       "strikeGap": 100
     }
+  },
+  "Zerodha": {
+    "apiKey": "",
+    "apiSecret": "",
+    "accessToken": "",
+    "baseUrl": "https://api.kite.trade",
+    "webSocketUrl": "wss://ws.kite.trade"
   }
 }
