--- a/backend/KAITerminal/KAITerminal.Api/KAITerminal.Api.csproj
+++ b/backend/KAITerminal/KAITerminal.Api/KAITerminal.Api.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Services/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../KAITerminal.Broker/KAITerminal.Broker.csproj" />
+  </ItemGroup>
+
 </Project>
