--- a/backend/KAITerminal/KAITerminal.Api/appsettings.json
+++ b/backend/KAITerminal/KAITerminal.Api/appsettings.json
@@ -18,5 +18,9 @@
   },
   "Frontend": {
     "Url": "http://localhost:5173"
+  },
+  "Zerodha": {
+    "baseUrl": "https://api.kite.trade",
+    "webSocketUrl": "wss://ws.kite.trade"
   }
 }
