--- a/backend/KAITerminal/KAITerminal.Broker/KAITerminal.Broker.csproj
+++ b/backend/KAITerminal/KAITerminal.Broker/KAITerminal.Broker.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../KAITerminal.Types/KAITerminal.Types.csproj" />
+  </ItemGroup>
+
 </Project>
