--- a/backend/KAITerminal/KAITerminal.RiskEngine/KAITerminal.RiskEngine.csproj
+++ b/backend/KAITerminal/KAITerminal.RiskEngine/KAITerminal.RiskEngine.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../KAITerminal.Broker/KAITerminal.Broker.csproj" />
+    <ProjectReference Include="../KAITerminal.Types/KAITerminal.Types.csproj" />
+  </ItemGroup>
 </Project>
