--- a/backend/KAITerminal.Api/appsettings.json
+++ b/backend/KAITerminal.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=kai-terminal.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,14 +13,14 @@
     "Key": "",
     "Issuer": "KAI.Terminal",
     "Audience": "KAI.Terminal.Frontend",
-    "ExpiryMinutes": 60
+    "ExpiryMinutes": 600
   },
   "GoogleAuth": {
     "ClientId": "",
     "ClientSecret": ""
   },
   "Frontend": {
-    "Url": "http://localhost:5173"
+    "Url": "http://localhost:3000"
   },
   "Zerodha": {
     "baseUrl": "https://api.kite.trade",
