remove zerodha broker and using upstox as primary broker.

--- a/backend/KAITerminal.Api/appsettings.json
+++ b/backend/KAITerminal.Api/appsettings.json
@@ -22,8 +22,11 @@
   "Frontend": {
     "Url": "http://localhost:3000"
   },
-  "Zerodha": {
-    "baseUrl": "https://api.kite.trade",
-    "webSocketUrl": "wss://ws.kite.trade"
+  "Upstox": {
+    "ApiKey": "",
+    "ApiSecret": "",
+    "RedirectUri": "",
+    "BaseUrl": "https://api.upstox.com",
+    "OrderBaseUrl": "https://api-hft.upstox.com"
   }
 }
