code refactoring in RiskEngine

--- a/backend/KAITerminal.RiskEngine/appsettings.json
+++ b/backend/KAITerminal.RiskEngine/appsettings.json
@@ -6,27 +6,29 @@
     }
   },
   "RiskEngine": {
-    "overallStopLoss": -25000,
-    "overallTarget": 25000,
-    "trailing": {
-      "enabled": true,
-      "activateAt": 5000,
-      "lockProfitAt": 2000,
-      "profitStep": 1000,
-      "tslIncrement": 500
+    "Strategies": ["DEFAULT_STRATEGY"],
+    "OverallStopLoss": -25000,
+    "OverallTarget": 25000,
+    "Trailing": {
+      "Enabled": true,
+      "ActivateAt": 5000,
+      "LockProfitAt": 2000,
+      "ProfitStep": 1000,
+      "TslIncrement": 500
     },
-    "strikeSL": {
-      "cePercent": 20,
-      "pePercent": 30,
-      "maxReEntry": 2,
-      "strikeGap": 100
+    "StrikeSL": {
+      "CePercent": 20,
+      "PePercent": 30,
+      "MaxReEntry": 2,
+      "StrikeGap": 100
     }
   },
-  "Zerodha": {
-    "apiKey": "",
-    "apiSecret": "",
-    "accessToken": "",
-    "baseUrl": "https://api.kite.trade",
-    "webSocketUrl": "wss://ws.kite.trade"
+  "Upstox": {
+    "ApiKey": "",
+    "ApiSecret": "",
+    "AccessToken": "",
+    "RedirectUri": "",
+    "BaseUrl": "https://api.upstox.com",
+    "OrderBaseUrl": "https://api-hft.upstox.com"
   }
 }
